@@ -1,7 +1,7 @@
 Package: tsvets
 Type: Package
 Title: Vector ETS Models
-Version: 0.3.8
+Version: 0.3.9
 Authors@R: c(person("Alexios", "Galanos", role = c("aut", "cre"),
     email = "alexios@4dscape.com"),
     person("James","Nesbit",role="ctb",
@@ -10,10 +10,10 @@ Authors@R: c(person("Alexios", "Galanos", role = c("aut", "cre"),
     email="kth.ohr@gmail.com"))
 Maintainer: alexios galanos <alexios@4dscape.com>
 Description: Vector Exponential Smoothing Models.
-SystemRequirements: C++11
+SystemRequirements: C++11, GNU make
 Depends: R (>= 3.5.0), Rcpp (>= 0.12.9), tsmethods
 LinkingTo: Rcpp (>= 0.12.9), RcppArmadillo, RcppDist
-Imports: methods, zoo, xts, tsaux, mvtnorm, MASS, MVN, Rsolnp, foreach, snow, doSNOW, doParallel, tsets, Matrix, data.table, viridis, corpcor
+Imports: methods, zoo, xts, tsaux, mvtnorm, MASS, MVN, Rsolnp, foreach, snow, doSNOW, doParallel, tsets, Matrix, data.table, viridis, corpcor, nloptr
 License: GPL-2
 Suggests: knitr
 Encoding: UTF-8
