@@ -11,6 +11,7 @@ importFrom("foreach","foreach","%do%","%dopar%","registerDoSEQ")
 importFrom("doParallel","registerDoParallel")
 importFrom("snow","makeCluster","stopCluster","clusterExport","clusterEvalQ")
 importFrom("doSNOW","registerDoSNOW")
+importFrom("nloptr","nloptr")
 importFrom("MASS","mvrnorm")
 importFrom("corpcor","is.positive.definite","make.positive.definite")
 importFrom("tsaux","mape","mase","bias","mslre","wape","mis","wslre","do.call.fast","box_cox","check_xreg","check_newxreg","future_dates","sampling_frequency")
