@@ -13,8 +13,8 @@ control = list(trace = 1, iter.max = 200, eval.max = 1000), ...)
 An object of class \dQuote{tsvets.spec}.
 }
 \item{solver}{
-Currently \dQuote{L-BFGS-B} from \dQuote{optim}, \dQuote{nlminb}, \dQuote{solnp} and \dQuote{gosolnp} bound constrained
-solvers are supported
+Currently \dQuote{L-BFGS-B} from \dQuote{optim}, \dQuote{nlminb}, \dQuote{solnp}, \dQuote{gosolnp} and \dQuote{nloptr} 
+bound constrained solvers are supported
 }
 \item{control}{
 Control parameters for the solvers.
